# platform.core.multimedia.mmsvc-player

./: .gitignore  AUTHORS  CMakeLists.txt  capi-media-player.manifest  mused-player.manifest
client/: AUTHORS  CMakeLists.txt  capi-media-player2.manifest
client/src/: player2.c  player2_internal.c  player2_wayland.c  player2_wlclient.c
client/test/: CMakeLists.txt  mused_player_es_push_test.c  player_client_test.c  player_es_push_test.c  player_evas_test.c  player_media_packet_test.c  player_test.c
include/: player2.h  player2_private.h  player2_wayland.h  player2_wlclient.h  player_msg_private.h
legacy/: CMakeLists.txt
legacy/include/: legacy_player.h  legacy_player_internal.h  legacy_player_private.h
legacy/src/: legacy_player.c  legacy_player_internal.c
legacy/test/: CMakeLists.txt  legacy_player_es_push_test.c  legacy_player_media_packet_test.c  legacy_player_test.c
muse/: CMakeLists.txt  README_FOR_NEW_API  api.list  make_api.py
muse/include/: muse_player.h  muse_player_msg.h  muse_player_private.h
muse/src/: muse_player.c  muse_player_cmd_dispatcher.c  muse_player_dispatcher.c  muse_player_msg_dispatcher.c
muse/test/: CMakeLists.txt  build_verify.c
packaging/: capi-media-player.spec  mmsvc-player.manifest  mmsvc-player.spec  mused-player.spec
src/: player_cmd_dispatcher.c  player_msg_dispatcher.c
